hello-devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-devops
  namespace: monitoring
  labels:
    app: hello-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-devops
  template:
    metadata:
      labels:
        app: hello-devops
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: hello-devops
        image: git.localhost/devops-lab/hello-devops:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests: { cpu: 50m, memory: 64Mi }
          limits:   { cpu: 200m, memory: 128Mi }
