hello-devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-devops
  namespace: monitoring
  labels:
    app: hello-devops
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  selector:
    app: hello-devops
