hello-devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-devops-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: hello.example.com
    http:
      paths:
      - backend:
          service:
            name: hello-devops
            port:
              number: 8000
        path: /
        pathType: Prefix
